# Fish-Game-POMDP

./: .gitignore  README.md  benchmark_results.md  fish-game.md  main.py  pyproject.toml  run_anthropic_fishing_game.py  run_coding_agent.py  run_gpt.py  run_gpt_v3.py  run_hard_mode.py  run_llm_benchmark.py  run_llm_solver.py
fishing_game/: baselines.py  coding_agent.py  config.py  evaluator.py  gpt_agent.py  llm_agent.py  llm_solver_agent.py  pomdp.py  runner.py  simulator.py  traced_runner.py
scripts/: __init__.py  baseline_prediction.py  run_anthropic_fishing_game.py  run_baselines.py  run_curriculum_baselines.py  run_gpt_v3.py  run_llm_solver_curriculum.py  run_llm_solver_curriculum_mock.py
tests/: test_fishing_game.py
tests/world_gen/: test_demo_smoke.py  test_generator.py  test_knobs.py  test_validator.py
traces/: gpt54_hard_seed42.json  gpt54_seed42_fishgame.json  gpt54_seed42_solved.json  simulated_llm_seed42.json
world_gen/: README.md  __init__.py  demo_generate.py  demo_pipeline.py  generator.py  knobs.py  validator.py
